<resources>
    <string name="app_name">电影基地</string>
    <string name="chat_had_copy">提取码已复制,可以直接粘贴</string>
    <string name="resource_info">资源列表</string>
    <string name="my_info">我的信息</string>
    <string name="contributor">贡献者 : %1$s</string>
    <string name="contributor1">贡&#160;&#160;献&#160;&#160;者 : %1$s(影币:%2$s)</string>
    <string name="filmSource">资源来源 : %1$s</string>
    <string name="filmLength">资源大小 : %1$s%2$s</string>
    <string name="filmTags">资源标签 : %1$s</string>
    <string name="filmAddress">资源地址 : \n%1$s</string>
    <string name="like">亲测可看(%1$s)</string>
    <string name="dislike">不给力(%1$s)</string>
    <string name="comment">评论(%1$s)</string>
    <string name="comment1">评论</string>

    <string name="mj_loading">正在加载，请您耐心等待…</string>
    <!--bugly_appkey-->
    <string name="bugly_appkey">88595e286e</string>
    <string name="image_save">保存到</string>
    <string name="image_save_fail_file_not_found">图片保存失败,文件不存在!</string>
    <string name="image_save_fail">图片保存失败</string>
    <string name="imageworker_tag">tag</string>
    <string name="loading">加载中…</string>
    <string name="this_is_item">This is item</string>
    <string name="add_film">添加电影</string>
    <string name="my_res">我贡献的资源</string>
    <string name="share_remind">资源分享说明</string>
    <string name="coin_info">影币获取说明</string>
    <string name="mall">影币兑换商城</string>
    <string name="exchange_mall">兑换商城</string>
    <string name="exchange_detail">兑换详情</string>
    <string name="about">关于电影基地</string>
    <string name="user_register">用户注册</string>
    <string name="user_login">用户登录</string>
    <string name="username">用户名 :</string>
    /*http://www.cnblogs.com/henryxu/archive/2012/08/26/2657097.html*/
    <string name="password">密&#160;&#160;&#160;&#160;码 :</string>
    <string name="email">邮&#160;&#160;&#160;&#160;箱 :</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="my_username">用户名 : %1$s</string>
    <string name="coin">影币 : %1$s个</string>
    <string name="myres">贡献资源数量 : %1$s个</string>
    <string name="goodres">资源被采纳数量 : %1$s个</string>
    <string name="level">我的等级 : %1$s</string>
    <string name="three_dot">%1$s&#8230;</string>
    <string name="release">发布</string>
    <string name="click_and_addcomment">点击添加评论</string>
    <string name="no_any_comment">还没有任何评论!</string>
    <string name="ineedcomment">我要评论</string>
    <string name="secret">"\n提取码 : "</string>
    <string name="web_load_error_try">页面加载失败，点击刷新~</string>
    <string name="tab_hot">热门</string>
    <string name="tab_categorize">分类</string>
    <string name="tab_me">我的</string>
    <string name="me">我的</string>
    <string name="categorize">分类</string>
    <string name="hot">热门</string>
    <string name="no_your_film_and_search">没有你要的电影?点击搜索一下~~</string>
    <string name="film_search">电影搜索</string>
    <string name="logining">登录中…</string>
    <string name="input_right_usename_and_psd">请输入正确的用户名与密码</string>
    <string name="sorry_no_your_res">未搜索到您要的资源</string>
    <string name="keyword_is_null">二货,你要找啥都不写吗</string>
    <string name="searching">正在搜索…</string>
    <string name="ihaveres_iadd">我有资源,我来添加</string>
    <string name="photograph">拍照</string>
    <string name="from_the_album_selection">从手机相册选择</string>
    <string name="text_failed">操作失败</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="error_code_10_">连接失败，请检查手机的网络(-10)</string>
    <string name="submit_film_pic">正在提交图片…</string>
    <string name="box_office">票房</string>
    <string name="lastest_box_office">最新票房</string>
    <string name="boxoffice_china">中国</string>
    <string name="boxoffice_us">美国</string>
    <string name="boxoffice_hk">香港</string>
    <string name="boxoffice_rid">票房排名</string>
    <string name="edit">编辑</string>
    <string name="myinfo">我的信息</string>
    <string name="version_info">V%1$s(%2$s)</string>
    <string name="update">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="getting_last_version_info">正在拉取最新版本信息&#8230;</string>
    <string name="cur_is_least_version">当前为最新版本</string>
    <string name="server_is_lost">很抱歉,服务器罢工了,稍候再试吧&#8230;</string>
    <string name="version_update_hint">%1$s版本升级</string>
    <string name="verson_find_new_version">发现新版本,是否更新 ?</string>
    <string name="update_immediately">立即升级</string>
    <string name="version_ignore">忽略</string>
    <string name="downloading">下载中&#8230;</string>
    <string name="start_download">开始下载</string>
    <string name="downloading_progress">下载中(%1$d%%)&#8230;</string>
    <string name="download_finish">下载完成</string>
    <string name="exit_login">退出登录</string>
    <string name="my_invite_code">我的邀请码 : %1$s</string>
    <string name="invite_code">邀请码 :</string>
    <string name="registerring">注册中&#8230;</string>
    <string name="register_succ_please_login">注册成功,正在登录&#8230;</string>
    <string name="reset_psd">重置密码</string>
    <string name="new_psd">新密码 :</string>
    <string name="old_psd">原密码 :</string>
    <string name="psd_confirm">确&#160;&#160;&#160;&#160;认 :</string>
    <string name="reseting_psd">正在修改密码&#8230;</string>
    <string name="film_type">电影类型 :</string>
    <string name="film_area">电影地区 :</string>
    <string name="film_year">电影年代 :</string>
    <string name="film_actor">电影主演 :</string>
    <string name="forgot_psd">忘记密码</string>
    <string name="submit">提交</string>
    <string name="copyright">Copyright © 2010 &#8211; 2016 SUCC7 Inc.All Rights Reserved</string>
    <string name="enjoy_remind">别顽皮,还有没有填写哦</string>
    <string name="error_invitecode">邀请码不合法,请填写正确的邀请码</string>
    <string name="invitecode_remind">提示 : 邀请码可选,公测阶段开放1000个名额注册,如果没有邀请码,请加微信 : wszcj-(注意后面的扛哦) 获取;</string>
    <string name="bind_email">绑定邮箱 : %1$s</string>
    <string name="has_verified">已验证</string>
    <string name="not_verified">未验证</string>
    <string name="bind_email_title">绑定邮箱</string>
    <string name="modify">修改</string>
    <string name="verify">验证</string>
    <string name="sent_resetpsd_email">正在发送密码重置邮件&#8230;</string>
    <string name="updating">正在修改&#8230;</string>
    <string name="bind_email_verify">提示 : 如果邮箱没有验证,请记得验证哦,验证邮箱之后密码忘记啥的再也不怕咯</string>
    <string name="goodsexchange_rule">
        1、奖品数量有限，先兑先得，兑完即止。奖品兑换成功后，会扣除相应影币，已兑换奖品不能退换。\n
        2、兑换成功后，您可以到“兑换记录”中查询已兑换奖品。 \n
        3、兑换奖品由奖品供应商提供，所有奖品均以实物为准，除奖品本身存在质量瑕疵外，均不允许换货。所兑换的奖品如有质量、售后服务等问题，均由奖品供应商负责处理、解决，我们会协助用户与奖品供应商联系。 \n
        4、奖品兑换生效后，请在奖品有效期内使用，奖品有效期以兑换当时最新活动公告或目录为准，超过有效期未使用，奖品将自动失效。 \n
        5、奖品兑换仅作为回馈用户对本APP的长期支持，不可用于兑换现金。 \n
        6、本规则最终解释权归电影基地所有。</string>
    <string name="exchange_record">兑换记录</string>
    <string name="share_to_friend">分享给朋友</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="loading_video">正在玩命加载视频中&#8230;</string>
    <string name="submitting">正在提交...</string>
    <string name="give_film_a_pic">大神,给电影一张封面图吧~</string>
    <string name="no_your_comment">大神,您的神评变成蝴蝶飞走了吗?</string>
    <string name="thanks_your_feedback">谢谢您的反馈!</string>
    <string name="nologin_looklookfirst"><u>不登录,我先瞧瞧</u></string>
    <string name="noreg_looklookfirst"><u>不注册,我先瞧瞧</u></string>
    <string name="no_login"><u>未登录</u></string>
    <string name="pleaseloginfirst">你还没有登录,请先登录!</string>

</resources>
