<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:orientation="vertical">
    <!--http://blog.csdn.net/u012520966/article/details/50821267-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_filmPic"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_vertical"
            android:src="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_filmcontributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/contributor1"
                android:textColor="@color/black"
                android:textSize="14sp"/>


            <TextView
                android:id="@+id/tv_filmSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/filmSource"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_filmTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/filmTags"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_filmLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/filmLength"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <!--http://blog.csdn.net/lyy1104/article/details/38869739-->
            <TextView
                android:id="@+id/tv_filmAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/play"
                android:ellipsize="end"
                android:lines="2"
                android:text="@string/filmAddress"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_like"
            style="@style/common_button_style_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/like"
            android:paddingStart="18dp"
            android:text="@string/like"/>

        <Button
            android:id="@+id/btn_dislike"
            style="@style/common_button_style_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/dislike"
            android:paddingStart="18dp"
            android:text="@string/dislike"/>

        <Button
            android:id="@+id/btn_comment"
            style="@style/common_button_style_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawableStart="@mipmap/comment"
            android:paddingStart="18dp"
            android:text="@string/comment"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/comment1"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/share"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_hascomment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_ineedcomment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/ineedcomment"
                android:textColor="@color/black"/>

            <ListView
                android:id="@+id/lv_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/white"
                android:dividerHeight="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nocomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/no_any_comment"/>

            <Button
                android:id="@+id/btn_click_addcomment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_common_button_bg"
                android:padding="5dp"
                android:text="@string/click_and_addcomment"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_comment_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/et_bg_line"
                android:hint="等待您的神评"/>

            <Button
                android:id="@+id/btn_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_common_button_bg"
                android:padding="4dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/release"
                android:textColor="@color/white"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>


</LinearLayout>